--- a/custom_widgets/pubspec.yaml
+++ b/custom_widgets/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_cupertino_desktop_kit: ">= 0.0.1 < 999.0.0"
 
 
   # The following adds the Cupertino Icons font to your application.
