--- a/custom_widgets/pubspec.yaml
+++ b/custom_widgets/pubspec.yaml
@@ -30,16 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
-  
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  window_manager: ^0.4.3
+  cupertino_icons: ^1.0.2
+  window_manager: ^0.3.7
+  flutter_cupertino_desktop_kit: ">= 0.0.1 < 999.0.0"
+  url_launcher: ^6.2.1
 
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
