--- a/custom_widgets/pubspec.yaml
+++ b/custom_widgets/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   window_manager: ^0.3.7
   flutter_cupertino_desktop_kit: ">= 0.0.1 < 999.0.0"
   url_launcher: ^6.2.1
+  google_fonts: ^3.0.1 
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -57,6 +58,12 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  fonts:
+    - family: MS_Sans_Serif
+      fonts:
+        - asset: assets/font/windows-xp-tahoma.ttf
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
